--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bodymovin": "^4.11.1",
+    "recompose": "^0.25.1"
+  },
   "peerDependencies": {
     "react": "15.x"
   },
